// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StreetMetaWidthLabel > renders when editable 1`] = `
<DocumentFragment>
  <div
    class="street-meta-item street-width street-width-editable"
  >
    <button>
      <div
        class="street-meta-icon"
      >
        <svg />
      </div>
      <div
        class="street-meta-content"
      >
        <span
          class="underline"
        >
          10 m width
        </span>
        <svg
          class="menu-carat-down"
        />
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`StreetMetaWidthLabel > renders when not editable 1`] = `
<DocumentFragment>
  <div
    class="street-meta-item street-meta-item-plain street-width"
  >
    <div
      class="street-meta-icon"
    >
      <svg />
    </div>
    <div
      class="street-meta-content"
    >
      <span
        class="underline"
      >
        10 m width
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StreetMetaWidthLabel > renders with over available width 1`] = `
<DocumentFragment>
  <div
    class="street-meta-item street-width street-width-editable"
  >
    <button>
      <div
        class="street-meta-icon"
      >
        <svg />
      </div>
      <div
        class="street-meta-content"
      >
        <span
          class="underline"
        >
          10 m width
        </span>
        <span
          class="street-width-over"
        >
          (1 m over)
        </span>
        <svg
          class="menu-carat-down"
        />
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`StreetMetaWidthLabel > renders with remaining width 1`] = `
<DocumentFragment>
  <div
    class="street-meta-item street-width street-width-editable"
  >
    <button>
      <div
        class="street-meta-icon"
      >
        <svg />
      </div>
      <div
        class="street-meta-content"
      >
        <span
          class="underline"
        >
          10 m width
        </span>
        <span
          class="street-width-under"
        >
          (1 m room)
        </span>
        <svg
          class="menu-carat-down"
        />
      </div>
    </button>
  </div>
</DocumentFragment>
`;
